feat: controller/registerUserTest, controller/loginUserTest added